--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -45,17 +45,6 @@
         "typeinfo": "cpp",
         "chrono": "cpp",
         "ctime": "cpp",
-        "ratio": "cpp",
-        "compare": "cpp",
-        "concepts": "cpp",
-        "numbers": "cpp",
-        "iomanip": "cpp",
-        "charconv": "cpp",
-        "format": "cpp",
-        "span": "cpp",
-        "variant": "cpp",
-        "semaphore": "cpp",
-        "stop_token": "cpp",
-        "thread": "cpp"
+        "ratio": "cpp"
     }
 }
